# onco-guide-agentic-ai

./: .gitignore  README.md  main.py  pyproject.toml
app/agents/: claim_verification_agent.py  clinical_trial_agent.py  manual_tool_agent.py  rag_agent.py  react_agent.py  reflection_agent.py  report_explanation_agent.py  screening_agent.py  supervisor_agent.py
app/api/: main_api.py  schemas.py
app/api/routes/: chat_routes.py  review_routes.py
app/db/: crud.py  database.py  init_db.py  models.py
app/graph/: simple_chat_graph.py
app/guardrails/: output_guardrail.py  unified_input_guardrail.py
app/hitl/: review_queue.py  reviewer_interface.py
app/mcp_servers/: clinical_trials_mcp_server.py  mcp_client.py  mcp_tool_adapter.py  pubmed_mcp_server.py  vector_db_mcp_server.py
app/rag/: basic_rag.py  hybrid_retriever.py
app/tools/: bm25_search_tool.py  citation_checker_tool.py  clinical_trials_tool.py  emergency_tool.py  entity_extraction_tool.py  nci_pdq_tool.py  pubmed_tool.py  report_parser_tool.py  risk_scoring_tool.py  tool_registry.py  vector_search_tool.py
app/utils/: llm.py
data/trusted_docs/: breast_cancer_basics.md  colorectal_cancer_basics.md  lung_cancer_basics.md
docs/: OncoGuide_Agentic_AI_Updated.docx
frontend/oncoguide-ui/: index.html  package-lock.json  package.json
frontend/oncoguide-ui/src/: App.css  App.jsx
frontend/oncoguide-ui/src/components/: ChatInput.jsx  ChatWindow.jsx  MessageBubble.jsx  ProgressPanel.jsx  ReviewDashboard.jsx
frontend/oncoguide-ui/src/services/: api.js
