[project]
name = "onco-guide-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "langsmith>=0.8.14",
    "mcp[cli]>=1.27.2",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
]
